# minecraft-with-rust

./: Cargo.toml  README.md  compilecpp.bat  todo.txt
blocks/: air.json  dirt_block.json  grass_block.json
shaders/: 2d.frag  2d.vert  default.frag  default.vert
src/: camera.rs  drawable.rs  gl.rs  main.rs  mesh.rs  raycast.rs
src/cpp/: glad.c  renderer.cpp
src/cpp/include/glad/: glad.h
src/minecraft/: block.rs  chunk.rs  mod.rs
