[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
glm = {package = "nalgebra-glm", version = "0.17.0"}

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false
